--- a/src/pages/albums.astro
+++ b/src/pages/albums.astro
@@ -143,7 +143,7 @@ const albums = await fetchAllRaindrops();
 
       /* ⬅️ Make the grid itself full-bleed (robust, no transform) */
       .fullbleed {
-        width: 100vw;
+        width: 100dvw;
         margin-left: calc(50% - 50vw);
         margin-right: calc(50% - 50vw);
         padding-inline: clamp(16px, 3vw, 48px);
