--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE } from '../consts';
 			<HeaderLink href="/books">Books</HeaderLink>
             <HeaderLink href="/albums">Albums</HeaderLink>
             <HeaderLink href="/art">Art</HeaderLink>
-			<HeaderLink href="/composers">Composers</HeaderLink>
+			<HeaderLink href="/inspirations">Inspirations</HeaderLink>
             <HeaderLink href="/guitar">Guitar</HeaderLink>
 		    <HeaderLink href="/projects">Projects</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
