--- a/src/pages/inspirations.astro
+++ b/src/pages/inspirations.astro
@@ -40,7 +40,7 @@ import SectionHero from '../components/SectionHero.astro';
 
   {/* 3. Michael Phelps */}
   <SectionHero
-    src="/images/inspirations/michael_phelps.jpg"
+    src="/images/inspirations/michael_phelps.png"
     alt="Michael Phelps journaling"
 />
   <h2>🏊 Michael Phelps and Journaling</h2>
