--- a/src/pages/inspirations.astro
+++ b/src/pages/inspirations.astro
@@ -139,3 +139,13 @@ import SectionHero from '../components/SectionHero.astro';
   <hr />
   <p><em>Thanks to every creator who pushed me to quantify life itself.</em></p>
 </Layout>
+
+<style>
+  /* Centers all section headings on this page */
+  h2 {
+    text-align: center;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+  }
+</style>
+
